--- a/Fil rouge/HTML, CSS, BOOTSTRAP, JAVASCRIPT/categories.html
+++ b/Fil rouge/HTML, CSS, BOOTSTRAP, JAVASCRIPT/categories.html
@@ -90,22 +90,14 @@
             </div>
 
 <hr>
-
             <div class="row">
-                <div class="col-6" id="ca_pianos">
+
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6" id="ca_pianos">
                     <H4>Pianos à queue</H4>
-                </div>
-                    <div class="col-6" id="ca_pianos">
-                    <h4>Pianos droits</h4>
-                </div>
-            </div>
-
-            <div class="row">
-
-                <div class="col-6">
                     <a class="nav-link" href="sous_categories.html"><img class="img-fluid" src="CSS/images/piano_queue.jpg" alt="queue" id="queue"></a> 
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6" id="ca_pianos">
+                    <h4>Pianos droits</h4>
                     <a class="nav-link" href="#"><img class="img-fluid" src="CSS/images/piano_droit.jpg" alt="droit" id="droit"></a> 
                 </div>
             </div>
