--- a/Fil rouge/HTML, CSS, BOOTSTRAP, JAVASCRIPT/sous_categories.html
+++ b/Fil rouge/HTML, CSS, BOOTSTRAP, JAVASCRIPT/sous_categories.html
@@ -83,39 +83,39 @@
             </div>
 <br>            
             <div class="row">
-                <div class="col-4"><a class="nav-link" href="produit.html"><img class="img-fluid" src="CSS/images/piano_queue_1.jpg" alt="piano_queue_1" id="piano_queue_1"></a></div>
-                <div class="col-6 mx-auto"><p class="premier">Kawai GL 10 WH/P Grand Piano</p></div>
-                <div class="col-2"><p class="premier1">11.290 &euro;</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4"><a class="nav-link" href="produit.html"><img class="img-fluid" src="CSS/images/piano_queue_1.jpg" alt="piano_queue_1" id="piano_queue_1"></a></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 mx-auto"><p class="premier">Kawai GL 10 WH/P Grand Piano</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2"><p class="premier1">11.290 &euro;</p></div>
             </div>
 <hr>
             <div class="row">
-                <div class="col-4"><a class="nav-link" href="#"><img class="img-fluid" src="CSS/images/piano_queue_2.jpg" alt="piano_queue_2" id="piano_queue_2"></a></div>
-                <div class="col-6 mx-auto"><p class="deuxieme">Kawai GL 10 E/P Grand Piano</p></div>
-                <div class="col-2"><p class="deuxieme2">10.890 &euro;</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4"><a class="nav-link" href="#"><img class="img-fluid" src="CSS/images/piano_queue_2.jpg" alt="piano_queue_2" id="piano_queue_2"></a></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 mx-auto"><p class="deuxieme">Kawai GL 10 E/P Grand Piano</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2"><p class="deuxieme2">10.890 &euro;</p></div>
             </div>
 <hr>
             <div class="row">
-                <div class="col-4"><a class="nav-link" href="#"><img class="img-fluid" src="CSS/images/piano_queue_3.jpg" alt="piano_queue_3" id="piano_queue_3"></a></div>
-                <div class="col-6 mx-auto"><p class="troisieme">Yamaha GB1 K Walnut Polished</p></div>
-                <div class="col-2"><p class="troisieme3">11.290 &euro;</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4"><a class="nav-link" href="#"><img class="img-fluid" src="CSS/images/piano_queue_3.jpg" alt="piano_queue_3" id="piano_queue_3"></a></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 mx-auto"><p class="troisieme">Yamaha GB1 K Walnut Polished</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2"><p class="troisieme3">11.290 &euro;</p></div>
             </div>
 <hr>
             <div class="row">
-                <div class="col-4"><a class="nav-link" href="#"><img class="img-fluid" src="CSS/images/piano_queue_4.jpg" alt="piano_queue_4" id="piano_queue_4"></a></div>
-                <div class="col-6 mx-auto"><p class="quatrieme">Yamaha C 1 X PE Grand Piano</p></div>
-                <div class="col-2"><p class="quatrieme4">22.990 &euro;</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4"><a class="nav-link" href="#"><img class="img-fluid" src="CSS/images/piano_queue_4.jpg" alt="piano_queue_4" id="piano_queue_4"></a></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 mx-auto"><p class="quatrieme">Yamaha C 1 X PE Grand Piano</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2"><p class="quatrieme4">22.990 &euro;</p></div>
             </div>
 <hr>
             <div class="row">
-                <div class="col-4"><a class="nav-link" href="#"><img class="img-fluid" src="CSS/images/piano_queue_5.jpg" alt="piano_queue_5" id="piano_queue_5"></a></div>
-                <div class="col-6 mx-auto"><p class="cinquieme">Yamaha GB1 K PWH</p></div>
-                <div class="col-2"><p class="cinquieme5">11.850 &euro;</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4"><a class="nav-link" href="#"><img class="img-fluid" src="CSS/images/piano_queue_5.jpg" alt="piano_queue_5" id="piano_queue_5"></a></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 mx-auto"><p class="cinquieme">Yamaha GB1 K PWH</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2"><p class="cinquieme5">11.850 &euro;</p></div>
             </div>
 <hr>
             <div class="row">
-                <div class="col-4"><a class="nav-link" href="#"><img class="img-fluid" src="CSS/images/piano_queue_6.jpg" alt="piano_queue_6" id="piano_queue_6"></a></div>
-                <div class="col-6 mx-auto"><p class="sixieme">Yamaha GC 2 PWH Stutzflügel</p></div>
-                <div class="col-2"><p class="sixieme6">23.390 &euro;</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4"><a class="nav-link" href="#"><img class="img-fluid" src="CSS/images/piano_queue_6.jpg" alt="piano_queue_6" id="piano_queue_6"></a></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 mx-auto"><p class="sixieme">Yamaha GC 2 PWH Stutzflügel</p></div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2"><p class="sixieme6">23.390 &euro;</p></div>
             </div>
 
             <div class="row">
