--- a/Fil rouge/HTML, CSS, BOOTSTRAP, JAVASCRIPT/inscription.html
+++ b/Fil rouge/HTML, CSS, BOOTSTRAP, JAVASCRIPT/inscription.html
@@ -7,9 +7,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Kawai GL 10 WH/P Grand Piano</title>
+    <title>Inscription</title>
 
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/style1.css">
   
     </head>
 
@@ -67,44 +67,67 @@
                 </div>
             </div>
 
-            <br>
-
-            <div class="row ">
-                <ul class="crumb">
-                    <li style="border-radius: 50px 0 0 50px; padding-left: 15px;"><a href="index.html">Accueil</a></li>
-                    <li><a href="categories.html">Pianos</a></li>
-                    <li style="border-radius: 0 50px 50px 0; padding-right: 15px;"><a href="sous_categories.html">Pianos à queue</a></li>
-                  </ul>
-            </div>
-
             <div class="row">
-                <div class="col-12" id="piano_1">
-                    <H2>Kawai GL 10 WH/P Grand Piano</H2>
+                <div class="col-12 haut">
+                    <h2>Inscrivez-vous</h2>
                 </div>
             </div>
-<br>
-            <div class="row">
-                <div class="col-6">
-                    <img class="img-fluid" src="CSS/images/piano_queue_1.jpg" alt="piano" id="piano">
-                </div>
 
-                <div class="col-6">
-                    <ul class="descriptif">
-                        <li>Mécanique Millennium III avec pièces en ABS Styran</li>
-                        <li>Pédale sostenuto</li>
-                        <li>Têtes des marteaux avec feutre</li>
-                        <li>Couvre clavier à fermeture lente</li>
-                        <li>Longueur: 153 cm</li>
-                        <li>Poids: 282 kg</li>
-                        <li>Finition: Blanc poli</li>
-                        <li>Banc inclus</li>
-                    </ul>
-                    <p class="prix">11.290 &euro;</p>
-<hr>
-                    <button type="button" class="btn btn-dark" id="bouton"><a class="valider" href="#">Ajouter au panier</a></button>
-                </div>
-            </div>
+            <form action="http://bienvu.net/script.php" method="post" id="formulaire_contact">
+                <div class="form-group">  
+                    <fieldset>  
+                        <div class="row inscription">
+                            <div class="col-6">
+
+                                <div class="form-group">
+                                    <label>Nom :</label>
+                                    <input class="form-control form-control-lg" type="text" id="nom" name="nom">
+                                    <div id="erreurName" class="Erreur"></div>
+                                </div>
 <br>
+                                <div class="form-group">
+                                    <label>Email :</label>
+                                    <input class="form-control form-control-lg" type="email" id="mail" name="mail">
+                                    <div id="erreurMail" class="Erreur"></div>                
+                                </div>
+<br>
+                                <div class="form-group">
+                                    <label>Mot de passe :</label>
+                                    <input class="form-control form-control-lg" type="password" id="mdp" name="mdp">
+                                    <div id="erreurMDP" class="Erreur"></div>
+                                </div>
+                            </div>
+
+                            <div class="col-6">
+                                <div class="form-group">
+                                    <label>Prénom : </label>
+                                    <input class="form-control form-control-lg" type="text" id="prenom" name="prenom">
+                                    <div id="erreurPrenom" class="Erreur"></div>
+                                </div>
+<br>
+                                <div class="form-group">
+                                    <label>Confirmation email :</label>
+                                    <input class="form-control form-control-lg" type="email" id="mail1" name="mail1">
+                                    <div id="erreurMail1" class="Erreur"></div>
+                                </div>
+<br>
+                                <div class="form-group">
+                                    <label>Confirmation mot de passe :</label>
+                                    <input class="form-control form-control-lg" type="password" id="mdp1" name="mdp">
+                                    <div id="erreurMDP1" class="Erreur"></div>
+                                </div>
+                            </div>
+
+                            <div class="col-12 bouton">
+                                    <button type="reset" class="btn btn-danger">Annuler</button>
+                                    <button id="envoie" type="submit" class="btn btn-dark">Créer votre compte</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </div>        
+            </form>
+
+
             <div class="row">
                 <div class="col-12" style="padding-bottom: 13px; padding-top: 13px;">
                     <img class="img-fluid" src="CSS/images/banniere centre 4 pictos.png" alt="banniere" id="banniere">
@@ -117,6 +140,9 @@
                 </div>
             </div>
         </div>
+
+        <script src="JavaScript/javascript.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
