--- a/Fil rouge/HTML, CSS, BOOTSTRAP, JAVASCRIPT/produit.html
+++ b/Fil rouge/HTML, CSS, BOOTSTRAP, JAVASCRIPT/produit.html
@@ -7,9 +7,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Inscription</title>
+    <title>Kawai GL 10 WH/P Grand Piano</title>
 
-    <link rel="stylesheet" href="CSS/style1.css">
+    <link rel="stylesheet" href="CSS/style.css">
   
     </head>
 
@@ -67,46 +67,44 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-12 haut">
-                    <h2>Inscrivez-vous</h2>
-                </div>
-            </div>
+            <br>
 
-            <div class="row inscription">
-                <div class="col-6">
-                    
-                    <label class="nom" for="nom">Nom :</label>
-                    <input class="form-control form-control-lg" type="text" aria-label=".form-control-lg example">
-<br>
-                    <label for="mail">Email :</label>
-                    <input class="form-control form-control-lg" type="text" aria-label=".form-control-lg example">                
-<br>
-                    <label for="mail">Mot de passe :</label>
-                    <input class="form-control form-control-lg" type="password" aria-label=".form-control-lg example">
-                </div>
-
-                <div class="col-6">
-                    <label class="nom" for="nom">Prénom : </label>
-                    <input class="form-control form-control-lg" type="text" aria-label=".form-control-lg example">
-<br>                
-                    <label for="mail">Confirmation email :</label>
-                    <input class="form-control form-control-lg" type="text" aria-label=".form-control-lg example">
-<br>
-                    <label for="mail">Confirmation mot de passe :</label>
-                    <input class="form-control form-control-lg" type="password" aria-label=".form-control-lg example">
-                </div>
+            <div class="row ">
+                <ul class="crumb">
+                    <li style="border-radius: 50px 0 0 50px; padding-left: 15px;"><a href="index.html">Accueil</a></li>
+                    <li><a href="categories.html">Pianos</a></li>
+                    <li style="border-radius: 0 50px 50px 0; padding-right: 15px;"><a href="sous_categories.html">Pianos à queue</a></li>
+                  </ul>
             </div>
 
             <div class="row">
-                <div class="col-12 bouton">
-                    <button type="button" class="btn btn-danger">Annuler</button>
-                    <button type="button" class="btn btn-dark">Créer votre compte</button>
+                <div class="col-12" id="piano_1">
+                    <H2>Kawai GL 10 WH/P Grand Piano</H2>
                 </div>
             </div>
+<br>
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                    <img class="img-fluid" src="CSS/images/piano_queue_1.jpg" alt="piano" id="piano">
+                </div>
 
-
-
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
+                    <ul class="descriptif">
+                        <li>Mécanique Millennium III avec pièces en ABS Styran</li>
+                        <li>Pédale sostenuto</li>
+                        <li>Têtes des marteaux avec feutre</li>
+                        <li>Couvre clavier à fermeture lente</li>
+                        <li>Longueur: 153 cm</li>
+                        <li>Poids: 282 kg</li>
+                        <li>Finition: Blanc poli</li>
+                        <li>Banc inclus</li>
+                    </ul>
+                    <p class="prix">11.290 &euro;</p>
+<hr>
+                    <button type="button" class="btn btn-dark" id="bouton"><a class="valider" href="#">Ajouter au panier</a></button>
+                </div>
+            </div>
+<br>
             <div class="row">
                 <div class="col-12" style="padding-bottom: 13px; padding-top: 13px;">
                     <img class="img-fluid" src="CSS/images/banniere centre 4 pictos.png" alt="banniere" id="banniere">
